fix spacing of student response number

--- a/app/styles/components/classroom_lessons/_script_items.scss
+++ b/app/styles/components/classroom_lessons/_script_items.scss
@@ -38,7 +38,6 @@
       background-color: #3adfbb;
       text-align: center;
       border-radius: 20px;
-      padding-top: 2px;
       font-size: 16px;
       font-weight: bold;
       color: #ffffff;
